<resources>

    <!-- CREDENCIALES APLICATIVO -->
    <string name="app_name">ecowatering</string>
    <string name="developer">Emerson Romero</string>
    <string name="desarrollo">Desarrollado por:</string>
    <string name="version">Version 1.0.0</string>

    <!-- LOGIN -->
    <string name="titulo_login">Ingresar Sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">¿No tienes cuenta?, Registrate</string>

    <!-- REGISTRO -->
    <string name="Formulario">Registro</string>
    <string name="Nombre">"Nombres y Apellidos "</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Guardar">Guardar</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Registrar">Registrar</string>


    <!-- ELECCION -->

    <!-- MAS DATOS -->


</resources>